--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <shadedClassifierName>aws</shadedClassifierName>
+                    <finalName>ToDoFunction</finalName>
                 </configuration>
                 <executions>
                     <execution>
